objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Custom_Field__c</fullName>
        <label>Custom Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
        <label>isCreatedUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__zendesk_id__c</fullName>
        <label>Zendesk User Id</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Custom_Field__c == &apos;Churlu&apos;</errorConditionFormula>
        <errorDisplayField>Custom_Field__c</errorDisplayField>
        <errorMessage>Please use another name</errorMessage>
    </validationRules>
</CustomObject>